ultima config 3:30am

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <!-- mover los elementos dentro en filas -->
                 <hr>
                 <br><br>
-                <div class="col">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 seccion_ingredientes">
                     <!-- asignar el col a cada elemento que se quiera acomodar en las distintas columnas -->
                     <h3 class="titulos3">INGREDIENTES</h3>
                     <br>
@@ -166,7 +166,7 @@
                         <li>½ cebolla, en cubos</li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 seccion_ingredientes">
                     <h3 class="titulos3">PREPARACIÓN</h3>
                     <br>
                     <br>
