--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3 id="h3">110 MIN / 6 A 8 PORCIONES</h3>
                 <div class="container py-4" id="botoness1">
                     <button type="button" class="btn btn-light B2 boton" data-bs-toggle="tooltip"
-                        data-bs-placement="bottom" data-bs-title="Presiona para enviar tu correo">
+                        data-bs-placement="bottom" data-bs-title="Presiona para enviar tu correo" id="enviarCorreo">
                         Enviar por correo </button>
                     <button type="button" class="btn btn-light B2 boton" data-bs-toggle="tooltip"
                         data-bs-placement="right" data-bs-title="Agrega esta receta a tus favoritos">
@@ -138,7 +138,7 @@
                 <br><br>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 seccion_ingredientes">
                     <!-- asignar el col a cada elemento que se quiera acomodar en las distintas columnas -->
-                    <h3 class="titulos3">INGREDIENTES</h3>
+                    <h3 class="titulos3 ingredientes">INGREDIENTES</h3>
                     <br>
                     <br>
                     <ul>
@@ -268,6 +268,8 @@
         <br>
         <a class="logo" id="logofooter" href="#">Ricomida</a>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
